# colorviz

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.ipynb  main.py
include/: app.hpp  camera.hpp  gamut.hpp  gfx.hpp  glBuffer.hpp  logging.hpp  mesh.hpp  model.hpp  shader_program.hpp  util.hpp  vecmath.hpp
profiles/: AdobeRGB1998.gam  CoatedGRACoL2006.xml
resources/profiles/: CIERGB.gam  sRGB Color Space Profile.gam
resources/shaders/: mesh.frag  mesh.vert
src/: app.cpp  camera.cpp  gamut.cpp  gfx.cpp  glBuffer.cpp  logging.cpp  main.cpp  mesh.cpp  shader_program.cpp  util.cpp  vecmath.cpp
